[project]
name = "greenblatt"
version = "0.1.0"
description = "그린블라트 응용 전략 - 한국 주식 백테스트"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "finance-datareader>=0.9.102",
    "kiwoom-restful>=0.2.7",
    "matplotlib>=3.10.8",
    "numpy>=1.26.4,<=2.0",
    "pandas>=2.2.0,<3.0",
    "pykrx>=1.2.4",
    "python-dotenv>=1.0.0",
    "yfinance>=1.2.0",
]

[tool.uv]
override-dependencies = [
    "numpy>=2.0" # pykrx가 요구하는 numpy>=1.2.4를 무시하고 2.0대를 강제
]

[project.optional-dependencies]
# 테스트/개발 전용 의존성: 설치 시 `pip install .[dev]` 또는 `python -m pip install '.[dev]'`
dev = ["pytest>=7.4", "pytest-asyncio>=0.21"]
doc = ["openpyxl>=3.1.5"]
